--- a/.github/workflows/pipeline-tests.yml
+++ b/.github/workflows/pipeline-tests.yml
@@ -31,7 +31,7 @@ jobs:
         run: chmod +x ./project/tests.sh
 
       - name: Run tests
-        run: ./tests.sh
+        run: ./project/tests.sh
         env:
           MOCK_DATA: true  
 
